[package]
name = "canonical_abi_converter"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
# keywords = []
# categories = []
homepage = "https://github.com/zebreus/canonical_abi_converter/tree/main/canonical_abi_converter"
# description = ""

[dependencies]
canonical_abi_converter_lib.workspace = true
canonical_abi_converter_macro.workspace = true
