[package]
name = "canonical_abi_converter_lib"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
# keywords = []
# categories = []
homepage = "https://github.com/zebreus/canonical_abi_converter/tree/main/canonical_abi_converter_lib"
# description = ""

[dependencies]
bitflags.workspace = true
