[package]
name = "canonical_abi_converter_macro"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
# keywords = []
# categories = []
homepage = "https://github.com/zebreus/canonical_abi_converter/tree/main/canonical_abi_converter_macro"
# description = ""
autotests = false

[[test]]
name = "tests"
path = "tests/tests.rs"

[lib]
proc-macro = true

[dependencies]
canonical_abi_converter_lib.workspace = true
darling.workspace = true
proc-macro2.workspace = true
quote.workspace = true
tempfile.workspace = true
thiserror.workspace = true
syn.workspace = true

[dev-dependencies]
trybuild.workspace = true
